# eeg-visualizer

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.md  REPOSITORY_READY.md  requirements-dev.txt
docs/: installation.md  user_guide.md
examples/: README.md
src/: README.md  pyproject.toml
src/eegviz/: __init__.py  config.py  types.py
src/eegviz/analysis/: bands.py  contrast.py  psd.py
src/eegviz/app/: main.py
src/eegviz/core/: __init__.py  epochs.py  session.py  validation.py
src/eegviz/export/: annotations.py  bandpower_csv.py  save_raw.py
src/eegviz/io/: edf_loader.py  markers_csv.py  markers_json.py
src/eegviz/preprocess/: channels.py  filtering.py  windows.py
src/eegviz/ui/: __init__.py  channels.py  exports.py  filters.py  upload.py  visualizations.py
src/eegviz/viz/: psd_plot.py  regional.py  temporal_gif.py  topomap.py
tests/: conftest.py  test_bands.py
